# Dynos

./: Dynos.py  Keybinding.txt  README.md  auto_dll.py  code_test.py  hijacking.py  injection.py  process_list.txt  requirements.txt  uac_bypass.py  winPID.txt
CreateIFileOperationDLL/: Build.bat  CMakeLists.txt  dll.cpp  reference.cpp
ExamDLL2/CreateDLL/: CreateDLL.sln
ExamDLL2/CreateDLL/CreateDLL/: CreateDLL.vcxproj  dllmain.cpp  framework.h  pch.h
ExamDLL2/CreateDLL/CreateDLL/x64/Debug/: CreateDLL.dll.recipe  CreateDLL.ilk  vc143.idb
ExamDLL2/CreateDLL/CreateDLL/x64/Debug/CreateDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CreateDLL.lastbuildstate  CreateDLL.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
ExamDLL2/CreateDLL/MainDLL/: MainDLL.cpp  MainDLL.vcxproj  MainDLL.vcxproj.filters
ExamDLL2/CreateDLL/MainDLL/x64/Debug/: MainDLL.exe.recipe  MainDLL.ilk  vc143.idb
ExamDLL2/CreateDLL/MainDLL/x64/Debug/MainDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ExamDLL2/CreateDLL/x64/Debug/: CreateDLL.exp  CreateDLL.lib
